--- a/css/scss/_notification.scss
+++ b/css/scss/_notification.scss
@@ -1,3 +1,4 @@
+/* MIXIN */
 @mixin notification($textColor,$primaryColor,$secondColor){
     color: #ffffff;
     background-color: tint($primaryColor, 5);
