--- a/css/scss/_progressbar.scss
+++ b/css/scss/_progressbar.scss
@@ -1,3 +1,4 @@
+/* BASE */
 progress,
 .ms-progress{
 	width: 100%;
@@ -17,6 +18,7 @@ progress,
 		line-height: 1.3rem;
 		color: #fff;
 		
+		/* COLORS */
 		&.ms-info{
 			background-color: $color-blue-1;
 		}
@@ -34,6 +36,7 @@ progress,
 		}
 	}
 	
+	/* SIZES */
 	&.ms-medium{
 		height: 1.7rem;
 		
@@ -52,6 +55,7 @@ progress,
 		}
 	}
 	
+	/* GLOBAL */
 	&.ms-rounded{
 		@include border-radius(50rem);
 		
