--- a/css/scss/_form.scss
+++ b/css/scss/_form.scss
@@ -43,7 +43,7 @@ input[type='file'],
 input:not([type]),
 textarea,
 select{
-	display: block;
+	display: inline-block;
 	width: 100%;
 	height: 2.3rem;
 	appearance: none;
@@ -78,6 +78,12 @@ select{
 		@include border-radius(100px);
 	}
 
+	&.ms-disabled{
+		cursor: not-allowed;
+		background-color: $color-gray-0;
+		border: 1px solid $color-gray-1;
+	}
+
 	/* SIZES */
 	&.ms-small{
 		height: 1.8rem;
@@ -99,11 +105,18 @@ select{
 }
 
 /* OVERDIDE */
-
 select{
+	min-width: 100px;
+	cursor: pointer;
 	background: #ffffff url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' class='svg-inline--fa fa-sort-down fa-w-10' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512'%3E%3Cpath fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z'%3E%3C/path%3E%3C/svg%3E") no-repeat right .5rem center/1rem 1rem;
 }
 
 textarea{
 	height: inherit;
+}
+
+input[disabled]{
+	cursor: not-allowed;
+	background-color: $color-gray-0;
+	border: 1px solid $color-gray-1;
 }
