--- a/css/scss/_color.scss
+++ b/css/scss/_color.scss
@@ -4,6 +4,8 @@ $color-gray-1: #e1e1e1;
 $color-gray-2: #b1b1b1;
 $color-gray-3: #484848;
 
+$color-dark-1: #2f2f2f;
+
 $color-blue-1: #219ced;
 $color-blue-2: shade($color-blue-1, 7);
 $color-blue-3: shade($color-blue-2, 7);
