--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -61,13 +61,21 @@ html {
   box-sizing: border-box; }
 
 body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"; }
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif; }
 
 b, strong {
   font-weight: bold; }
 
 a {
   color: #219ced; }
+
+p {
+  display: block;
+  line-height: 1.3rem;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px; }
 
 /* MIXINS */
 /* BASE */
@@ -410,7 +418,7 @@ progress,
   width: 100%;
   height: 1.3rem;
   display: flex;
-  background-color: #e1e1e1;
+  background-color: #f6f6f6;
   text-align: center;
   overflow: hidden;
   -webkit-border-radius: 4px;
@@ -886,7 +894,7 @@ h6, .h6 {
 /* MARK */
 mark, .ms-mark {
   background-color: #f9bf10;
-  padding: 0.1rem 0.2rem;
+  padding: 0.1rem 0.15rem;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
@@ -901,3 +909,29 @@ mark, .ms-mark {
   mark.ms-danger, .ms-mark.ms-danger {
     background-color: #e04540;
     color: #ffffff; }
+
+/* CODE */
+code, .ms-code {
+  background-color: #fdf0f0;
+  color: #e04540;
+  font-size: 90%;
+  font-family: Courier, monospace;
+  padding: 0.1rem 0.15rem;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px; }
+
+/* TERMINAL */
+terminal, .ms-terminal {
+  background-color: #2f2f2f;
+  color: #ffffff;
+  font-size: 90%;
+  font-family: Courier, monospace;
+  padding: 0.2rem 0.2rem;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px; }
