--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body{
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+	font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
 }
 
 b,strong{
@@ -18,5 +18,14 @@ b,strong{
 
 a{
 	color: $color-blue-1;
+}
+
+p{
+	display: block;
+	line-height: 1.3rem;
+	margin-block-start: 1em;
+	margin-block-end: 1em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
 }
 
