Clean up, Label, Rename Typography
- Clean up
- Added new label style

--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -15,5 +15,6 @@
 @import "_notification";
 @import "_progressbar";
 @import "_form";
-@import "_typographie";
+@import "_typography";
+@import "_label";
 
