--- a/css/scss/_label.scss
+++ b/css/scss/_label.scss
@@ -1,48 +1,70 @@
 @mixin label($textColor,$primaryColor) {
 	background-color: $primaryColor;
 	color: $textColor;
+	border-color: transparent;
 }
 
-/* BASE */
+@mixin color-label {
+	&.ms-info{
+		@include label(#ffffff, $color-blue-1);
+		
+		&:hover{
+			background-color: $color-blue-2;
+		}
+	}
+	
+	&.ms-success{
+		@include label(#ffffff, $color-green-1);
+
+		&:hover{
+			background-color: $color-green-2;
+		}
+	}
+	
+	&.ms-danger{
+		@include label(#ffffff, $color-red-1);
+
+		&:hover{
+			background-color: $color-red-2;
+		}
+	}
+	
+	&.ms-warning{
+		@include label(#000000, $color-yellow-1);
+		
+		&:hover{
+			background-color: $color-yellow-2;
+		}
+	}
+}
+
+/* BASE LABEL*/
 .ms-label{
-	background-color: $color-gray-0;
+	background-color: #ffffff;
+	border: 1px solid $color-gray-1;
 	color: $color-dark-1;
-	font-size: 0.8rem;
+	font-size: 1rem;
 	margin-right: 0.1rem;
 	padding: 0.2rem 0.5rem;
 	@include border-radius(3px);
 	
 	/* COLORS */
-	&.ms-info{
-		@include label(#ffffff, $color-blue-1)
-	}
-	
-	&.ms-success{
-		@include label(#ffffff, $color-green-1)
-	}
-	
-	&.ms-danger{
-		@include label(#ffffff, $color-red-1)
-	}
-	
-	&.ms-warning{
-		@include label(#000000, $color-yellow-1)
-	}
+	@include color-label;
 	
 	/* SIZES */
 	&.ms-small{
-		padding: 0.15rem 0.6rem;
-		font-size: 0.7rem;
+		padding: 0.1rem 0.3rem;
+		font-size: 0.9rem;
 	}
 	
 	&.ms-medium{
 		padding: 0.4rem 0.7rem;
-		font-size: 0.9rem;
+		font-size: 1.1rem;
 	}
 	
 	&.ms-large{
 		padding: 0.6rem 0.9rem;
-		font-size: 1rem;
+		font-size: 1.2rem;
 	}
 	
 	/* GLOBAL */
