--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -91,7 +91,7 @@ code,.ms-code{
 }
 
 /* TERMINAL */
-terminal,.ms-terminal{
+kbd,.ms-kbd{
 	background-color: $color-dark-1;
 	color: #ffffff;
 	font-size: 90%;
