--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -12,9 +12,10 @@
 @import "_color";
 @import "_global";
 @import "_button";
-@import "_notification";
+@import "_alert";
 @import "_progressbar";
 @import "_form";
 @import "_typography";
 @import "_label";
+@import "_table";
 
