--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -9,6 +9,7 @@ html {
 }
 
 body{
+	color: #333333;
 	font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
 }
 
