--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -27,6 +27,7 @@ input[type='submit']{
   text-align: center;
   text-decoration: none;
   font-size: 1rem;
+  font-weight: 500;
   cursor: pointer;
   margin: 0;
   padding: 0.4rem 1rem;
@@ -72,11 +73,13 @@ input[type='submit']{
   }
   
   &.ms-medium{
-    padding: 0.6rem 1.5rem;
+    padding: 0.6rem 1.2rem;
+    font-size: 1.1rem;
   }
   
   &.ms-large{
-    padding: 0.7rem 1.8rem;
+    padding: 0.7rem 1.4rem;
+    font-size: 1.2rem;
   }
   
   /* WIDTH */
