--- a/css/scss/_progressbar.scss
+++ b/css/scss/_progressbar.scss
@@ -7,6 +7,7 @@ progress,
 	background-color: $color-gray-0;
 	text-align: center;
 	overflow: hidden;
+	margin-bottom: 1rem;
 	@include border-radius(4px);
 	
 	.ms-progress-fill{
