--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -488,17 +488,6 @@ progress,
 
 /* MIXIN */
 /* BASE */
-.ms-form-group {
-  margin-bottom: 1rem; }
-  .ms-form-group label, .ms-form-group .label {
-    display: block;
-    margin-bottom: .6rem;
-    font-size: 1rem; }
-  .ms-form-group .ms-under-input {
-    display: block;
-    font-size: 0.9rem;
-    margin-top: 0.4rem; }
-
 input[type='email'],
 input[type='number'],
 input[type='password'],
@@ -828,6 +817,28 @@ select {
     -webkit-box-shadow: #b1b1b1 0 0 3px;
     -moz-box-shadow: #b1b1b1 0 0 3px;
     box-shadow: #b1b1b1 0 0 3px; }
+
+.ms-form-group {
+  margin-bottom: 1rem; }
+  .ms-form-group label, .ms-form-group .ms-label {
+    display: block;
+    margin-bottom: .6rem;
+    font-size: 1rem; }
+  .ms-form-group .ms-under-input {
+    display: block;
+    font-size: 0.9rem;
+    margin-top: 0.4rem; }
+
+.ms-form-group-inline {
+  margin-bottom: 1rem; }
+  .ms-form-group-inline input {
+    width: inherit;
+    display: inline-block; }
+  .ms-form-group-inline label, .ms-form-group-inline .ms-label {
+    display: inline-block;
+    font-size: 1rem;
+    margin-top: 0.4rem;
+    min-width: 100px; }
 
 /* OVERDIDE */
 select {
