--- a/css/scss/_form.scss
+++ b/css/scss/_form.scss
@@ -9,22 +9,6 @@
 }
 
 /* BASE */
-.ms-form-group{
-	margin-bottom: 1rem;
-
-	label, .label{
-		display: block;
-		margin-bottom: .6rem;
-		font-size: 1rem;
-	}
-
-	.ms-under-input{
-		display: block;
-		font-size: 0.9rem;
-		margin-top: 0.4rem;
-	}
-}
-
 input[type='email'],
 input[type='number'],
 input[type='password'],
@@ -101,6 +85,38 @@ select{
 	&:focus {
 		outline:0;
 		@include box-shadow($color-gray-2 0 0 3px);
+	}
+}
+
+.ms-form-group{
+	margin-bottom: 1rem;
+
+	label, .ms-label{
+		display: block;
+		margin-bottom: .6rem;
+		font-size: 1rem;
+	}
+
+	.ms-under-input{
+		display: block;
+		font-size: 0.9rem;
+		margin-top: 0.4rem;
+	}
+}
+
+.ms-form-group-inline{
+	margin-bottom: 1rem;
+
+	input{
+		width: inherit;
+		display: inline-block;
+	}
+
+	label, .ms-label{
+		display: inline-block;
+		font-size: 1rem;
+		margin-top: 0.4rem;
+		min-width: 100px;
 	}
 }
 
