--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -63,21 +63,10 @@ h6,.h6 {
 
 /* MARK */
  mark,.ms-mark{
-	background-color: $color-yellow-1;
-	padding: 0.1rem 0.15rem;
+	background-color: #ffe9b3;
+	border-bottom: .05rem solid #ffd367;
+	padding: 0.1rem 0.2rem;
 	@include border-radius(3px);
-
-	&.ms-info{
-		@include mark(#ffffff, $color-blue-1);
-	}
-
-	&.ms-success{
-		@include mark(#ffffff, $color-green-1);
-	}
-
-	&.ms-danger{
-		@include mark(#ffffff, $color-red-1);
-	}
 }
 
 /* CODE */
@@ -86,7 +75,7 @@ code,.ms-code{
 	color: $color-red-1;
 	font-size: 90%;
 	font-family: Courier, monospace;
-	padding: 0.1rem 0.15rem;
+	padding: 0.1rem 0.2rem;
 	@include border-radius(3px);
 }
 
